# tdwebrtc

./: .gitignore  .npmignore  BUILD.gn  CHANGELOG.md  INTEGRATION-GUIDE.md  Index.ets  LICENSE  PUBLISH-CHECKLIST.md  PUBLISH-GUIDE.md  README.md  build-rust.ps1  hvigorfile.ts  obfuscation-rules.txt  oh-package.json5  package.json
example/: BasicVideoCallExample.ets  MediaStreamAdvancedExample.ets  README.md  SignalingClientExample.ets
hvigor/: hvigor-config.json5
src/main/: module.json5
src/main/ets/: AudioCapture.ets  AudioPlayback.ets  CameraCapture.ets  MediaCodec.ets  MediaStream.ets  SignalingClient.ets  VideoDecoderH264.ets  VideoDecoderVP8.ets  VideoSurface.ets  WebRTCAdapter.ets  WebRTCManager.ets
src/main/ets/types/: libwebrtc_client.so.d.ts
src/main/ets/utils/: Index.ets  LogUtil.ets  NetworkUtil.ets  PermissionUtil.ets
src/main/resources/base/element/: string.json
src/types/: libwebrtc_client.so.d.ts
